--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
   <script src="https://maps.googleapis.com/maps/api/js?v=3.27&libraries=places,geometry&key=AIzaSyAnu-dpHZYZqiGaP69OrP6L7Oy5OUjzsnU"></script>
+  <script src='https://www.google.com/recaptcha/api.js'></script>
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
